--- a/app/src/lang/translations/en-US.yaml
+++ b/app/src/lang/translations/en-US.yaml
@@ -110,6 +110,7 @@ rename_version: Rename Version
 compare_version: Compare Version
 save_version: Save Version
 promote_version: Promote Version
+promote_version_disabled: No changes selected
 promote_version_drawer_title: Promote {version} into Main
 outdated_notice: >-
   The main item has been updated since this version was created. Please review all the field values below, and confirm
