--- a/app/src/lang/translations/en-US.yaml
+++ b/app/src/lang/translations/en-US.yaml
@@ -104,8 +104,9 @@ suffix: Suffix
 version: Version
 version_name: Version Name
 main_version: Main
+switch_version: Switch Version
+switch_version_copy: Are you sure you want to switch to the "{version}" version?
 create_version: Create Version
-switch_to_version_after_creation: Switch to Version After Creation
 rename_version: Rename Version
 compare_version: Compare Version
 save_version: Save Version
