align update version dialog with new changes

--- a/app/src/lang/translations/en-US.yaml
+++ b/app/src/lang/translations/en-US.yaml
@@ -108,7 +108,7 @@ main_version: Main
 switch_version: Switch Version
 switch_version_copy: Are you sure you want to switch to the "{version}" version?
 create_version: Create Version
-rename_version: Rename Version
+update_version: Update Version
 compare_version: Compare Version
 save_version: Save Version
 promote_version: Promote Version
