add POC for onboarding route

--- a/app/src/lang/translations/en-US.yaml
+++ b/app/src/lang/translations/en-US.yaml
@@ -311,6 +311,7 @@ confirmation_dialog: Confirmation Dialog
 confirmation_description: Confirmation Description
 confirmation_input_fields: Confirmation Input Fields
 next: Next
+skip: Skip
 field_name: Field Name
 translations: Translations
 no_translations: No Translations
