--- a/app/src/lang/translations/en-US.yaml
+++ b/app/src/lang/translations/en-US.yaml
@@ -128,7 +128,7 @@ version_key: Version Key
 version_name: Version Name
 main_version: Main
 switch_version: Switch Version
-switch_version_copy: Are you sure you want to switch to the "{version}" version?
+switch_version_copy: Are you sure you want to switch to the "{version}" version? Unsaved changes will be lost.
 create_version: Create Version
 update_version: Update Version
 compare_version: Compare Version
