Add Percent to Translations

--- a/app/src/lang/translations/en-US.yaml
+++ b/app/src/lang/translations/en-US.yaml
@@ -2374,3 +2374,4 @@ export_dashboard: Export Dashboard
 duplicate_dashboard: Duplicate Dashboard
 search_dashboard: Search Dashboard...
 search_flow: Search Flow...
+percent: Percent
