update slide title
Co-authored-by: Pascal Jufer <pascal-jufer@bluewin.ch>

--- a/app/src/lang/translations/en-US.yaml
+++ b/app/src/lang/translations/en-US.yaml
@@ -2302,7 +2302,7 @@ onboarding:
     data_scientist: Data Scientist
     nontechnical: Non-Technical User
   loading:
-    title: Setting up your database...
+    title: Setting up your project...
     text: |
       Awesome! You're all set.
 
